Creación index.html español

--- a/es/index.html
+++ b/es/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Portfolio – Español</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Paloma Aguado | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hola, soy Paloma</h1>
-  <p>Este es mi portfolio en español.</p>
+    <header>
+        <div class="logo">PALOMA AGUADO</div>
+        <nav>
+            <a href="en/index.html" class="lang-switch">English</a>
+        </nav>
+    </header>
 
-  <nav>
-    <a href="/en/">English</a>
-  </nav>
+    <main class="gallery">
+        <div class="project-card">
+            <img src="https://via.placeholder.com/600x450" alt="Proyecto 1">
+            <div class="overlay">
+                <div class="text">Nombre del Proyecto</div>
+            </div>
+        </div>
+        <div class="project-card">
+            <img src="https://via.placeholder.com/600x450" alt="Proyecto 2">
+            <div class="overlay">
+                <div class="text">Diseño Gráfico</div>
+            </div>
+        </div>
+        </main>
 </body>
 </html>
