--- a/en/index.html
+++ b/en/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Portfolio – English</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Paloma Aguado | Portfolio</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <h1>Hello, I'm Paloma</h1>
-  <p>This is my portfolio in English.</p>
+    <header>
+        <div class="logo">PALOMA AGUADO</div>
+        <nav>
+            <a href="../index.html" class="lang-switch">Español</a>
+        </nav>
+    </header>
 
-  <nav>
-    <a href="/es/">Español</a>
-  </nav>
+    <main class="gallery">
+        <div class="project-card">
+            <img src="https://via.placeholder.com/600x450" alt="Project 1">
+            <div class="overlay">
+                <div class="text">Project Name</div>
+            </div>
+        </div>
+        <div class="project-card">
+            <img src="https://via.placeholder.com/600x450" alt="Project 2">
+            <div class="overlay">
+                <div class="text">Graphic Design</div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
