Creación index.html español

--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Paloma Aguado – Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Paloma Aguado | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Portfolio</h1>
-  <p>Selecciona idioma:</p>
+    <header>
+        <div class="logo">PALOMA AGUADO</div>
+        <nav>
+            <a href="en/index.html" class="lang-switch">English</a>
+        </nav>
+    </header>
 
-  <ul>
-    <li><a href="/es/">Español</a></li>
-    <li><a href="/en/">English</a></li>
-  </ul>
+    <main class="gallery">
+        <div class="project-card">
+            <img src="https://via.placeholder.com/600x450" alt="Proyecto 1">
+            <div class="overlay">
+                <div class="text">Nombre del Proyecto</div>
+            </div>
+        </div>
+        <div class="project-card">
+            <img src="https://via.placeholder.com/600x450" alt="Proyecto 2">
+            <div class="overlay">
+                <div class="text">Diseño Gráfico</div>
+            </div>
+        </div>
+        </main>
 </body>
 </html>
