--- a/es/index.html
+++ b/es/index.html
@@ -9,9 +9,11 @@
 <body>
     <header>
         <div class="logo">PALOMA AGUADO</div>
-        <nav>
-            <a href="en/index.html" class="lang-switch">English</a>
-        </nav>
+      <nav>
+    <a href="index.html">Proyectos</a>
+    <a href="contacto.html" style="margin-left: 15px;">Contacto</a>
+    <a href="en/index.html" class="lang-switch" style="margin-left: 25px;">English</a>
+</nav>
     </header>
 
     <main class="gallery">
