--- a/en/index.html
+++ b/en/index.html
@@ -9,9 +9,11 @@
 <body>
     <header>
         <div class="logo">PALOMA AGUADO</div>
-        <nav>
-            <a href="../index.html" class="lang-switch">Español</a>
-        </nav>
+      <nav>
+    <a href="index.html">Projects</a>
+    <a href="contact.html" style="margin-left: 15px;">Contact</a>
+    <a href="../index.html" class="lang-switch" style="margin-left: 25px;">Español</a>
+</nav>
     </header>
 
     <main class="gallery">
