--- a/es/index.html
+++ b/es/index.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <div class="logo">PALOMA AGUADO</div>
-      <nav>
-    <a href="index.html">Proyectos</a>
-    <a href="contacto.html" style="margin-left: 15px;">Contacto</a>
-    <a href="en/index.html" class="lang-switch" style="margin-left: 25px;">English</a>
+     <nav>
+    <a href="../contacto.html">Contacto</a>
+    <span style="margin: 0 10px; color: #ccc;">|</span>
+    <a href="../en/index.html">English</a>
 </nav>
     </header>
 
