--- a/en/index.html
+++ b/en/index.html
@@ -10,9 +10,9 @@
     <header>
         <div class="logo">PALOMA AGUADO</div>
       <nav>
-    <a href="index.html">Projects</a>
-    <a href="contact.html" style="margin-left: 15px;">Contact</a>
-    <a href="../index.html" class="lang-switch" style="margin-left: 25px;">Español</a>
+    <a href="../contact.html">Contact</a>
+    <span style="margin: 0 10px; color: #ccc;">|</span>
+    <a href="../es/index.html">Español</a>
 </nav>
     </header>
 
