--- a/index.html
+++ b/index.html
@@ -6,28 +6,25 @@
     <title>Paloma Aguado | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header>
-        <div class="logo">PALOMA AGUADO</div>
-        <nav>
-            <a href="../contacto.html">Contacto</a> <span style="margin: 0 10px; color: #ccc;">|</span>
-            <a href="../en/index.html" class="lang-switch">English</a>
+<body class="landing-page">
+    <div class="landing-container">
+        <header>
+            <h1 class="landing-logo">PALOMA AGUADO</h1>
+        </header>
+        
+        <nav class="language-picker">
+            <div class="lang-option">
+                <a href="es/index.html">ESPAÑOL</a>
+            </div>
+            <div class="separator"></div>
+            <div class="lang-option">
+                <a href="en/index.html">ENGLISH</a>
+            </div>
         </nav>
-    </header>
 
-    <main class="gallery">
-        <div class="project-card">
-            <img src="https://via.placeholder.com/600x450" alt="Proyecto 1">
-            <div class="overlay">
-                <div class="text">Nombre del Proyecto</div>
-            </div>
-        </div>
-        <div class="project-card">
-            <img src="https://via.placeholder.com/600x450" alt="Proyecto 2">
-            <div class="overlay">
-                <div class="text">Diseño Gráfico</div>
-            </div>
-        </div>
-        </main>
+        <footer>
+            <a href="contacto.html" class="landing-contact">Contacto / Contact</a>
+        </footer>
+    </div>
 </body>
 </html>
