Actualización index.html

--- a/index.html
+++ b/index.html
@@ -3,27 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paloma Aguado | Portfolio</title>
+    <title>Paloma Aguado | Adobe Portfolio Style</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="landing-page">
-    <div class="landing-container">
-        <header>
-            <h1 class="landing-logo">PALOMA AGUADO</h1>
+<body class="adobe-landing">
+    <div class="wrapper">
+        <header class="main-header">
+            <h1 class="brand">PALOMA AGUADO</h1>
         </header>
-        
-        <nav class="language-picker">
-            <div class="lang-option">
-                <a href="es/index.html">ESPAÑOL</a>
-            </div>
-            <div class="separator"></div>
-            <div class="lang-option">
-                <a href="en/index.html">ENGLISH</a>
-            </div>
-        </nav>
 
-        <footer>
-            <a href="contacto.html" class="landing-contact">Contacto / Contact</a>
+        <main class="selection-area">
+            <div class="intro-text">
+                <p>Selecciona tu idioma / Select your language</p>
+            </div>
+            
+            <div class="button-group">
+                <a href="es/index.html" class="adobe-btn">Español</a>
+                <a href="en/index.html" class="adobe-btn">English</a>
+            </div>
+        </main>
+
+        <footer class="main-footer">
+            <nav>
+                <a href="contacto.html">Contacto</a>
+                <span class="dot">•</span>
+                <a href="contact.html">Contact</a>
+            </nav>
         </footer>
     </div>
 </body>
