Actualización index.html

--- a/index.html
+++ b/index.html
@@ -3,34 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paloma Aguado | Adobe Portfolio Style</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400&display=swap" rel="stylesheet">
+    <title>Paloma Aguado | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="adobe-landing">
-    <div class="wrapper">
-        <header class="main-header">
-            <h1 class="brand">PALOMA AGUADO</h1>
-        </header>
+<body class="landing-background">
+    <main class="split-container">
+        <div class="side-image">
+            <img src="tu-foto.jpg" alt="Paloma Aguado"> 
+        </div>
 
-        <main class="selection-area">
-            <div class="intro-text">
-                <p>Selecciona tu idioma / Select your language</p>
-            </div>
+        <div class="side-content">
+            <header>
+                <h1 class="landing-title">PALOMA AGUADO</h1>
+            </header>
             
-            <div class="button-group">
-                <a href="es/index.html" class="adobe-btn">Español</a>
-                <a href="en/index.html" class="adobe-btn">English</a>
-            </div>
-        </main>
-
-        <footer class="main-footer">
-            <nav>
-                <a href="contacto.html">Contacto</a>
-                <span class="dot">•</span>
-                <a href="contact.html">Contact</a>
+            <nav class="landing-nav">
+                <a href="es/index.html" class="btn-adobe">Español</a>
+                <a href="en/index.html" class="btn-adobe">English</a>
             </nav>
-        </footer>
-    </div>
+
+            <footer class="landing-footer">
+                <a href="contacto.html">Contacto</a>
+            </footer>
+        </div>
+    </main>
 </body>
 </html>
