--- a/index.html
+++ b/index.html
@@ -3,29 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paloma Aguado | Portfolio</title>
+    <title>Paloma Aguado</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="landing-background">
-    <main class="split-container">
-        <div class="side-image">
-            <img src="tu-foto.jpg" alt="Paloma Aguado"> 
+<body class="landing-page">
+    <div class="content-wrapper">
+        <div class="profile-container">
+            <img src="tu-foto.jpg" alt="Paloma Aguado" class="profile-pic">
         </div>
 
-        <div class="side-content">
-            <header>
-                <h1 class="landing-title">PALOMA AGUADO</h1>
-            </header>
-            
-            <nav class="landing-nav">
-                <a href="es/index.html" class="btn-adobe">Español</a>
-                <a href="en/index.html" class="btn-adobe">English</a>
-            </nav>
+        <h1 class="main-title">PALOMA AGUADO</h1>
 
-            <footer class="landing-footer">
-                <a href="contacto.html">Contacto</a>
-            </footer>
-        </div>
-    </main>
+        <nav class="lang-nav">
+            <a href="es/index.html" class="btn-minimal">ESPAÑOL</a>
+            <a href="en/index.html" class="btn-minimal">ENGLISH</a>
+        </nav>
+
+        <footer>
+            <a href="contacto.html" class="contact-link">Contacto / Contact</a>
+        </footer>
+    </div>
 </body>
 </html>
