--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="landing-page">
     <div class="content-wrapper">
         <div class="profile-container">
-            <img src="tu-foto.jpg" alt="Paloma Aguado" class="profile-pic">
+            <img src="asiático mallorca.jpg" alt="Paloma Aguado" class="profile-pic">
         </div>
 
         <h1 class="main-title">PALOMA AGUADO</h1>
