--- a/en/index.html
+++ b/en/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">PALOMA AGUADO</div>
       <nav>
-    <a href="contact.html">Contact</a>
+    <a href="./contact.html">Contact</a>
     <span style="margin: 0 10px; color: #ccc;">|</span>
     <a href="../es/index.html">Español</a>
 </nav>
