--- a/es/index.html
+++ b/es/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">PALOMA AGUADO</div>
      <nav>
-    <a href="contacto.html">Contacto</a>
+    <a href="/es/contacto.html">Contacto</a>
     <span style="margin: 0 10px; color: #ccc;">|</span>
     <a href="../en/index.html">English</a>
 </nav>
