--- a/es/contacto.html
+++ b/es/contacto.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto | Paloma Aguado</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
         <div class="logo"><a href="index.html" style="text-decoration:none; color:inherit;">PALOMA AGUADO</a></div>
         <nav>
             <a href="index.html">Proyectos</a>
-            <a href="en/contact.html" class="lang-switch" style="margin-left: 20px;">English</a>
+            <a href="../en/contact.html" class="lang-switch" style="margin-left: 20px;">English</a>
         </nav>
     </header>
 
