--- a/es/contacto.html
+++ b/es/contacto.html
@@ -10,10 +10,9 @@
     <header>
         <div class="logo"><a href="index.html" style="text-decoration:none; color:inherit;">PALOMA AGUADO</a></div>
         <nav>
-    <a href="index.html">Proyectos</a>
-    <span style="margin: 0 10px; color: #ccc;">|</span>
-    <a href="../en/contact.html" class="lang-switch">English</a>
-</nav>
+            <a href="index.html">Proyectos</a>
+            <a href="../en/contact.html" class="lang-switch" style="margin-left: 20px;">English</a>
+        </nav>
     </header>
 
     <main class="contact-container">
@@ -28,7 +27,7 @@
         </form>
 
         <div class="social-links">
-            <a href="#">LinkedIn</a> / <a href="#">Instagram</a> / <a href="mailto:tu@email.com">Email</a>
+            <a href="#">LinkedIn</a> / <a href="#">Instagram</a> / <a href="mailto:tuemail@ejemplo.com">Email</a>
         </div>
     </main>
 </body>
