--- a/en/contact.html
+++ b/en/contact.html
@@ -11,7 +11,7 @@
         <div class="logo"><a href="index.html" style="text-decoration:none; color:inherit;">PALOMA AGUADO</a></div>
         <nav>
             <a href="index.html">Projects</a>
-            <a href="../contacto.html" class="lang-switch" style="margin-left: 20px;">Español</a>
+            <a href="../es/contacto.html" class="lang-switch" style="margin-left: 20px;">Español</a>
         </nav>
     </header>
 
@@ -27,7 +27,7 @@
         </form>
 
         <div class="social-links">
-            <a href="#">LinkedIn</a> / <a href="#">Instagram</a> / <a href="mailto:your@email.com">Email</a>
+            <a href="#">LinkedIn</a> / <a href="#">Instagram</a> / <a href="mailto:tuemail@ejemplo.com">Email</a>
         </div>
     </main>
 </body>
