--- a/en/contact.html
+++ b/en/contact.html
@@ -1,29 +1,35 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Paloma Aguado</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
-        <div class="logo"><a href="/en/index.html" style="text-decoration:none; color:inherit;">PALOMA AGUADO</a></div>
+        <div class="logo"><a href="index.html" style="text-decoration:none; color:inherit;">PALOMA AGUADO</a></div>
         <nav>
-            <a href="/en/index.html">Projects</a>
-            <a href="/es/contacto.html" class="lang-switch" style="margin-left: 20px;">Español</a>
+            <a href="index.html">Projects</a>
+            <a href="../contacto.html" class="lang-switch" style="margin-left: 20px;">Español</a>
         </nav>
     </header>
 
     <main class="contact-container">
         <h1>Contact</h1>
         <p>Have a project in mind or just want to say hello? I'd love to hear from you.</p>
+        
         <form action="#" class="contact-form">
             <input type="text" placeholder="Name" required>
             <input type="email" placeholder="Email" required>
             <textarea placeholder="Message" rows="5" required></textarea>
             <button type="submit">Send</button>
         </form>
+
+        <div class="social-links">
+            <a href="#">LinkedIn</a> / <a href="#">Instagram</a> / <a href="mailto:your@email.com">Email</a>
+        </div>
     </main>
 </body>
 </html>
