Actualización contacto.html

--- a/es/contacto.html
+++ b/es/contacto.html
@@ -27,7 +27,7 @@
         </form>
 
         <div class="social-links">
-            <a href="#">LinkedIn</a> / <a href="#">Instagram</a> / <a href="mailto:tuemail@ejemplo.com">Email</a>
+            <a href="#">LinkedIn</a> / <a href="#">Instagram</a> / <a href="mailto:tu@email.com">Email</a>
         </div>
     </main>
 </body>
