--- a/es/contacto.html
+++ b/es/contacto.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <div class="logo"><a href="index.html" style="text-decoration:none; color:inherit;">PALOMA AGUADO</a></div>
-        <nav>
-            <a href="index.html">Proyectos</a>
-            <a href="../en/contact.html" class="lang-switch" style="margin-left: 20px;">English</a>
-        </nav>
+       <nav>
+    <a href="index.html">Proyectos</a>
+    <a href="/palomaaguado.github.io/es/contacto.html" class="lang-switch" style="margin-left: 20px;">Español</a>
+</nav>
     </header>
 
     <main class="contact-container">
