--- a/es/index.html
+++ b/es/index.html
@@ -10,9 +10,9 @@
     <header>
         <div class="logo">PALOMA AGUADO</div>
      <nav>
-    <a href="/es/contacto.html">Contacto</a>
+    <a href="/palomaaguado.github.io/es/contacto.html">Contacto</a> 
     <span style="margin: 0 10px; color: #ccc;">|</span>
-    <a href="../en/index.html">English</a>
+    <a href="/palomaaguado.github.io/en/index.html">English</a>
 </nav>
     </header>
 
