--- a/en/index.html
+++ b/en/index.html
@@ -10,9 +10,9 @@
     <header>
         <div class="logo">PALOMA AGUADO</div>
       <nav>
-    <a href="/en/contact.html">Contact</a>
+    <a href="/palomaaguado.github.io/en/contact.html">Contact</a>
     <span style="margin: 0 10px; color: #ccc;">|</span>
-    <a href="../es/index.html">Español</a>
+    <a href="/palomaaguado.github.io/es/index.html">Español</a>
 </nav>
     </header>
 
