Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </nav>
 
         <footer>
-            <a href="contacto.html" class="contact-link">Contacto / Contact</a>
-        </footer>
+    <a href="/palomaaguado.github.io/es/contacto.html" class="contact-link">Contacto / Contact</a>
+</footer>
     </div>
 </body>
 </html>
