--- a/es/contacto.html
+++ b/es/contacto.html
@@ -11,7 +11,7 @@
         <div class="logo"><a href="index.html" style="text-decoration:none; color:inherit;">PALOMA AGUADO</a></div>
        <nav>
     <a href="index.html">Proyectos</a>
-    <a href="/palomaaguado.github.io/en/contact.html" class="lang-switch" style="margin-left: 20px;">Español</a>
+    <a href="/palomaaguado.github.io/en/contact.html" class="lang-switch" style="margin-left: 20px;">Inglés</a>
 </nav>
     </header>
 
