--- a/en/contact.html
+++ b/en/contact.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo"><a href="index.html" style="text-decoration:none; color:inherit;">PALOMA AGUADO</a></div>
        <nav>
-    <a href="index.html">Proyectos</a>
+    <a href="index.html">Projects</a>
     <a href="/palomaaguado.github.io/es/contacto.html" class="lang-switch" style="margin-left: 20px;">Español</a>
 </nav>
     </header>
