Actualización contacto.html

--- a/es/contacto.html
+++ b/es/contacto.html
@@ -27,8 +27,10 @@
         </form>
 
         <div class="social-links">
-            <a href="#">LinkedIn</a> / <a href="#">Instagram</a> / <a href="mailto:tu@email.com">Email</a>
-        </div>
+    <a href="https://www.linkedin.com/in/paloma-aguado-l%C3%B3pez/" target="_blank">LinkedIn</a> / 
+    <a href="https://www.instagram.com/palomitas09/?hl=es" target="_blank">Instagram</a> / 
+    <a href="mailto:paloaglo@gmail.com">Email</a>
+</div>
     </main>
 </body>
 </html>
