Actualización index.html

--- a/es/index.html
+++ b/es/index.html
@@ -17,11 +17,17 @@
     </header>
 
     <main class="gallery">
-        <div class="project-card">
-            <img src="https://via.placeholder.com/600x450" alt="Proyecto 1">
-            <div class="overlay">
-                <div class="text">Nombre del Proyecto</div>
-            </div>
+        <div class="tarjeta-proyecto">
+    <a href="proyectos/kukicha.html"> <div class="imagen-contenedor">
+            <img src="../proyectos/kukicha-portada.jpg" alt="Kukicha — Identidad de marca">
+        </div>
+        <div class="info-proyecto">
+            <span class="categoria">Identidad de Marca</span>
+            <h3>Kukicha — Té Japonés</h3>
+            <p>Diseño de packaging y branding minimalista.</p>
+        </div>
+    </a>
+</div>
         </div>
         <div class="project-card">
             <img src="https://via.placeholder.com/600x450" alt="Proyecto 2">
