Actualización kukicha.html

--- a/es/proyectos/kukicha.html
+++ b/es/proyectos/kukicha.html
@@ -1,43 +1,30 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kukicha - Paloma Aguado</title>
-    <link rel="stylesheet" href="../../style.css"> </head>
-<body>
-    <nav class="project-nav">
-        <a href="../index.html">← Volver a Proyectos</a>
-    </nav>
+<main class="project-container">
+    
+    <section class="project-hero">
+        <img src="../../proyectos/Packaging.png" alt="Kukicha">
+    </section>
 
-    <main class="project-detail">
-        <header class="project-header">
-            <h1>Kukicha</h1>
-            <p class="subtitle">Identidad de marca para té japonés</p>
-        </header>
+    <header class="project-header">
+        <h1>Kukicha</h1>
+        <div class="project-meta">
+            <span class="tag">Identidad de Marca</span>
+            <span class="year">2025</span>
+        </div>
+        
+        <div class="project-content">
+            <div class="development">
+                <h3>Desarrollo del Proyecto</h3>
+                <p>AKukicha es una marca ficticia de té japonés desarrollada desde cero como proyecto de identidad corporativa.
+El objetivo fue crear una marca visual minimalista, elegante y sostenible, inspirada en la tradición japonesa y orientada a un público joven-adulto consciente del bienestar y el diseño.</p>
+            </div>
+    </header>
 
-        <section class="project-description">
-            <div class="description-text">
-                <h3>El Concepto</h3>
-                <p>Kukicha es una marca ficticia de té japonés desarrollada desde cero como proyecto de identidad corporativa.
-El objetivo fue crear una marca visual minimalista, elegante y sostenible, inspirada en la tradición japonesa y orientada a un público joven-adulto consciente del bienestar y el diseño."</p>
-            </div>
-            <div class="project-meta">
-                <p><strong>Cliente:</strong> Proyecto Personal</p>
-                <p><strong>Software:</strong> Adobe Illustrator, Photoshop, Canva</p>
-                <p><strong>Año:</strong> 2025</p>
-            </div>
+    <section class="project-gallery">
+        <img src="../../proyectos/imagen de marca.png" alt="Imagen de marca">
+        <img src="../../proyectos/merchan.png" alt="Merchandasing">
+        <img src="../../proyectos/papeleria.png" alt="Papelería">
+        <img src="../../proyectos/web.png" alt="Web">
+        <img src="../../proyectos/rrss.png" alt="Rrss">
         </section>
 
-        <section class="project-gallery">
-            <img src="../../proyectos/kukicha-1.jpg" alt="Logo Kukicha">
-            <img src="../../proyectos/kukicha-2.jpg" alt="Packaging Té">
-            <img src="../../proyectos/kukicha-3.jpg" alt="Papelería">
-        </section>
-    </main>
-
-    <footer class="project-footer">
-        <a href="mailto:paloaglo@gmail.com" class="contact-link">¿Te interesa este proyecto? Escríbeme</a>
-    </footer>
-</body>
-</html>
+</main>
