Actualización kukicha.html

--- a/es/proyectos/kukicha.html
+++ b/es/proyectos/kukicha.html
@@ -14,17 +14,14 @@
         <div class="project-content">
             <div class="development">
                 <h3>Desarrollo del Proyecto</h3>
-                <p>AKukicha es una marca ficticia de té japonés desarrollada desde cero como proyecto de identidad corporativa.
-El objetivo fue crear una marca visual minimalista, elegante y sostenible, inspirada en la tradición japonesa y orientada a un público joven-adulto consciente del bienestar y el diseño.</p>
+                <p>Kukicha es una marca ficticia de té japonés desarrollada desde cero como proyecto de identidad corporativa. El objetivo fue crear una marca visual minimalista, elegante y sostenible, inspirada en la tradición japonesa y orientada a un público joven-adulto consciente del bienestar y el diseño.</p>
             </div>
-    </header>
-
-    <section class="project-gallery">
+        </div> </header> <section class="project-gallery">
         <img src="../../proyectos/imagen de marca.png" alt="Imagen de marca">
         <img src="../../proyectos/merchan.png" alt="Merchandasing">
         <img src="../../proyectos/papeleria.png" alt="Papelería">
         <img src="../../proyectos/web.png" alt="Web">
         <img src="../../proyectos/rrss.png" alt="Rrss">
-        </section>
+    </section>
 
 </main>
