Actualización kukicha.html

--- a/es/proyectos/kukicha.html
+++ b/es/proyectos/kukicha.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kukicha - Paloma Aguado</title>
-    <link rel="stylesheet" href="../../style.css">
+    <title>Kukicha — Paloma Aguado</title>
+    <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
 
-    <nav style="padding: 20px;">
-        <a href="../index.html" style="text-decoration: none; color: #888;">← Volver</a>
+    <nav style="padding: 40px; font-family: sans-serif;">
+        <a href="../index.html" style="text-decoration: none; color: #888; font-size: 0.9rem;">← Volver a Proyectos</a>
     </nav>
 
     <main class="project-container">
         
         <section class="project-hero">
-            <img src="../../proyectos/Packaging.png" alt="Kukicha">
+            <img src="../../proyectos/Packaging.png" alt="Kukicha Packaging">
         </section>
 
         <header class="project-header">
             <h1>Kukicha</h1>
             <div class="project-meta">
-                <span class="tag">Identidad de Marca</span> / 2025
+                <span>Identidad de Marca</span> / 2025
             </div>
             
             <div class="project-content">
@@ -34,13 +34,17 @@
 
         <section class="project-gallery">
             <img src="../../proyectos/imagen de marca.png" alt="Imagen de marca">
-            <img src="../../proyectos/merchan.png" alt="Merchandasing">
+            <img src="../../proyectos/merchan.png" alt="Merchandising">
             <img src="../../proyectos/papeleria.png" alt="Papelería">
             <img src="../../proyectos/web.png" alt="Web">
-            <img src="../../proyectos/rrss.png" alt="Rrss">
+            <img src="../../proyectos/rrss.png" alt="RRSS">
         </section>
 
     </main>
+
+    <footer style="text-align: center; padding: 80px 0; color: #ccc; font-family: sans-serif; font-size: 0.8rem;">
+        <p>&copy; 2025 Paloma Aguado</p>
+    </footer>
 
 </body>
 </html>
