Actualización kukicha.html

--- a/es/proyectos/kukicha.html
+++ b/es/proyectos/kukicha.html
@@ -15,7 +15,7 @@
     <main class="project-container">
         
         <section class="project-hero">
-            <img src="../../PROYECTOS/Packaging.png" alt="Kukicha Packaging">
+            <img src="../../proyectos/packaging.png" alt="Kukicha">
         </section>
 
         <header class="project-header">
@@ -33,11 +33,11 @@
         </header>
 
         <section class="project-gallery">
-            <img src="../../PROYECTOS/imagen%20de%20marca.png" alt="Imagen de marca">
-            <img src="../../PROYECTOS/merchan.png" alt="Merchandising">
-            <img src="../../PROYECTOS/papeleria.png" alt="Papelería">
-            <img src="../../PROYECTOS/web.png" alt="Web">
-            <img src="../../PROYECTOS/rrss.png" alt="RRSS">
+            <img src="../../proyectos/imagen%20de%20marca.png" alt="Imagen de marca">
+            <img src="../../proyectos/merchan.png" alt="Merchandising">
+            <img src="../../proyectos/papeleria.png" alt="Papelería">
+            <img src="../../proyectos/web.png" alt="Web">
+            <img src="../../proyectos/rrss.png" alt="RRSS">
         </section>
 
     </main>
