--- a/es/proyectos/kukicha.html
+++ b/es/proyectos/kukicha.html
@@ -4,43 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kukicha — Paloma Aguado</title>
-    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css">
 </head>
 <body>
 
     <nav style="padding: 40px; font-family: sans-serif;">
-        <a href="../index.html" style="text-decoration: none; color: #888; font-size: 0.9rem;">← Volver a Proyectos</a>
+        <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: #888;">← Volver</a>
     </nav>
 
-    <main class="project-container">
+    <main class="project-container" style="max-width: 1000px; margin: 0 auto; padding: 20px;">
         
         <section class="project-hero">
-            <img src="../../proyectos/packaging.png" alt="Kukicha">
+            <img src="/palomaaguado.github.io/proyectos/Packaging.png" alt="Kukicha" style="width: 100%;">
         </section>
 
-        <header class="project-header">
-            <h1>Kukicha</h1>
-            <div class="project-meta">
-                <span>Identidad de Marca</span> / 2025
-            </div>
-            
-            <div class="project-content">
-                <div class="development">
-                    <h3>Desarrollo del Proyecto</h3>
-                    <p>Kukicha es una marca ficticia de té japonés desarrollada desde cero como proyecto de identidad corporativa. El objetivo fue crear una marca visual minimalista, elegante y sostenible, inspirada en la tradición japonesa y orientada a un público joven-adulto consciente del bienestar y el diseño.</p>
-                </div>
+        <header class="project-header" style="margin: 40px 0; font-family: sans-serif;">
+            <h1 style="font-size: 3rem; font-weight: 200;">Kukicha</h1>
+            <p style="color: #888;">Identidad de Marca / 2025</p>
+            <div style="margin-top: 20px; line-height: 1.6; max-width: 700px;">
+                <h3>Desarrollo del Proyecto</h3>
+                <p>Kukicha es una marca ficticia de té japonés desarrollada desde cero como proyecto de identidad corporativa.</p>
             </div>
         </header>
 
-        <section class="project-gallery">
-            <img src="../../proyectos/imagen%20de%20marca.png" alt="Imagen de marca">
-            <img src="../../proyectos/merchan.png" alt="Merchandising">
-            <img src="../../proyectos/papeleria.png" alt="Papelería">
-            <img src="../../proyectos/web.png" alt="Web">
-            <img src="../../proyectos/rrss.png" alt="RRSS">
+        <section class="project-gallery" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+            <img src="/palomaaguado.github.io/proyectos/imagen%20de%20marca.png" alt="Marca" style="width: 100%;">
+            <img src="/palomaaguado.github.io/proyectos/merchan.png" alt="Merchan" style="width: 100%;">
+            <img src="/palomaaguado.github.io/proyectos/papeleria.png" alt="Papeleria" style="width: 100%;">
+            <img src="/palomaaguado.github.io/proyectos/web.png" alt="Web" style="width: 100%;">
         </section>
 
     </main>
+
 
     <footer style="text-align: center; padding: 80px 0; color: #ccc; font-family: sans-serif; font-size: 0.8rem;">
         <p>&copy; 2025 Paloma Aguado</p>
