Actualización kukicha.html

--- a/es/proyectos/kukicha.html
+++ b/es/proyectos/kukicha.html
@@ -6,37 +6,36 @@
     <title>Kukicha — Paloma Aguado</title>
     <link rel="stylesheet" href="/palomaaguado.github.io/styles.css">
 </head>
-<body>
+<body style="margin:0; padding:0; background-color: white;">
 
     <nav style="padding: 40px; font-family: sans-serif;">
         <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: #888;">← Volver</a>
     </nav>
 
-    <main class="project-container" style="max-width: 1000px; margin: 0 auto; padding: 20px;">
+    <main class="project-container" style="max-width: 1000px; margin: 0 auto; padding: 0 20px;">
         
-        <section class="project-hero">
-            <img src="/palomaaguado.github.io/proyectos/Packaging.png" alt="Kukicha" style="width: 100%;">
+        <section class="project-hero" style="margin-bottom: 60px;">
+            <img src="/palomaaguado.github.io/proyectos/Packaging.png" alt="Kukicha" style="width: 100%; height: auto; display: block;">
         </section>
 
-        <header class="project-header" style="margin: 40px 0; font-family: sans-serif;">
-            <h1 style="font-size: 3rem; font-weight: 200;">Kukicha</h1>
-            <p style="color: #888;">Identidad de Marca / 2025</p>
-            <div style="margin-top: 20px; line-height: 1.6; max-width: 700px;">
-                <h3>Desarrollo del Proyecto</h3>
-                <p>Kukicha es una marca ficticia de té japonés desarrollada desde cero como proyecto de identidad corporativa.</p>
+        <header class="project-header" style="margin-bottom: 60px; font-family: sans-serif;">
+            <h1 style="font-size: 3rem; font-weight: 200; margin-bottom: 10px;">Kukicha</h1>
+            <p style="color: #888; text-transform: uppercase; font-size: 0.8rem; letter-spacing: 1px;">Identidad de Marca / 2025</p>
+            <div style="margin-top: 30px; line-height: 1.8; color: #333; max-width: 750px;">
+                <h3 style="font-weight: 600;">Desarrollo del Proyecto</h3>
+                <p>Kukicha es una marca ficticia de té japonés desarrollada desde cero como proyecto de identidad corporativa. El objetivo fue crear una marca visual minimalista, elegante y sostenible, inspirada en la tradición japonesa y orientada a un público joven-adulto consciente del bienestar y el diseño.</p>
             </div>
         </header>
 
-        <section class="project-gallery" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
-            <img src="/palomaaguado.github.io/proyectos/imagen%20de%20marca.png" alt="Marca" style="width: 100%;">
-            <img src="/palomaaguado.github.io/proyectos/merchan.png" alt="Merchan" style="width: 100%;">
-            <img src="/palomaaguado.github.io/proyectos/papeleria.png" alt="Papeleria" style="width: 100%;">
-            <img src="/palomaaguado.github.io/proyectos/web.png" alt="Web" style="width: 100%;">
+        <section class="project-gallery" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; padding-bottom: 100px;">
+            <img src="/palomaaguado.github.io/proyectos/imagen%20de%20marca.png" alt="Marca" style="width: 100%; height: auto; display: block;">
+            <img src="/palomaaguado.github.io/proyectos/merchan.png" alt="Merchan" style="width: 100%; height: auto; display: block;">
+            <img src="/palomaaguado.github.io/proyectos/papeleria.png" alt="Papeleria" style="width: 100%; height: auto; display: block;">
+            <img src="/palomaaguado.github.io/proyectos/web.png" alt="Web" style="width: 100%; height: auto; display: block;">
+            <img src="/palomaaguado.github.io/proyectos/rrss.png" alt="RRSS" style="width: 100%; height: auto; display: block;">
         </section>
 
     </main>
-
-
     <footer style="text-align: center; padding: 80px 0; color: #ccc; font-family: sans-serif; font-size: 0.8rem;">
         <p>&copy; 2025 Paloma Aguado</p>
     </footer>
