--- a/es/index.html
+++ b/es/index.html
@@ -19,7 +19,7 @@
     <main class="gallery">
         <div class="tarjeta-proyecto">
     <a href="proyectos/kukicha.html"> <div class="imagen-contenedor">
-            <img src="../proyectos/kukicha-portada.jpg" alt="Kukicha — Identidad de marca">
+            <img src="../proyectos/packaging.png" alt="Kukicha — Identidad de marca">
         </div>
         <div class="info-proyecto">
             <span class="categoria">Identidad de Marca</span>
