--- a/es/index.html
+++ b/es/index.html
@@ -17,10 +17,17 @@
     </header>
 
     <main class="gallery">
-        <div class="tarjeta-proyecto">
-    <a href="proyectos/kukicha.html"> <div class="imagen-contenedor">
-            <img src="../proyectos/packaging.png" alt="Kukicha — Identidad de marca">
+           <div class="tarjeta-proyecto" style="margin-bottom: 40px;">
+    <a href="proyectos/kukicha.html" style="text-decoration: none; color: inherit; display: block;">
+        <div class="imagen-contenedor" style="overflow: hidden; border-radius: 4px;">
+            <img src="../proyectos/packaging.png" alt="Kukicha — Identidad de marca" style="width: 100%; height: auto; display: block;">
         </div>
+        <div class="proyecto-info" style="margin-top: 15px;">
+            <h3 style="margin: 0; font-family: sans-serif; font-weight: 400; font-size: 1.2rem;">Kukicha</h3>
+            <p style="margin: 5px 0 0; color: #888; font-family: sans-serif; font-size: 0.9rem;">Identidad de marca</p>
+        </div>
+    </a>
+</div>
         <div class="info-proyecto">
             <span class="categoria">Identidad de Marca</span>
             <h3>Kukicha — Té Japonés</h3>
