Actualización index.html

--- a/es/index.html
+++ b/es/index.html
@@ -20,7 +20,7 @@
     <div class="tarjeta-proyecto">
     <a href="proyectos/kukicha.html" style="text-decoration: none; color: inherit;">
         <div class="imagen-contenedor">
-            <img src="/palomaaguado.github.io/proyectos/packaging.png" alt="Kukicha — Identidad de marca">
+            <img src="palomaaguado.github.io/proyectos/packaging.png" alt="Kukicha — Identidad de marca">
         </div>
         <div class="proyecto-info">
             <h3>Kukicha</h3>
