--- a/es/proyectos/kukicha.html
+++ b/es/proyectos/kukicha.html
@@ -15,7 +15,7 @@
     <main class="project-container" style="max-width: 1000px; margin: 0 auto; padding: 0 20px;">
         
         <section class="project-hero" style="margin-bottom: 60px;">
-            <img src="/palomaaguado.github.io/proyectos/Packaging.png" alt="Kukicha" style="width: 100%; height: auto; display: block;">
+            <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha" style="width: 100%; height: auto; display: block;">
         </section>
 
         <header class="project-header" style="margin-bottom: 60px; font-family: sans-serif;">
