--- a/es/proyectos/kukicha.html
+++ b/es/proyectos/kukicha.html
@@ -28,15 +28,15 @@
         </header>
 
         <section class="project-hero" style="margin-bottom: 60px;">
-    <img src="../../proyectos/packaging.png" alt="Kukicha" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha" style="width: 100%; height: auto; display: block;">
 </section>
 
 <section class="project-gallery" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; padding-bottom: 100px;">
-    <img src="../../proyectos/imagen%20de%20marca.png" alt="Marca" style="width: 100%; height: auto; display: block;">
-    <img src="../../proyectos/merchan.png" alt="Merchan" style="width: 100%; height: auto; display: block;">
-    <img src="../../proyectos/papeleria.png" alt="Papeleria" style="width: 100%; height: auto; display: block;">
-    <img src="../../proyectos/web.png" alt="Web" style="width: 100%; height: auto; display: block;">
-    <img src="../../proyectos/rrss.png" alt="RRSS" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/imagen%20de%20marca.png" alt="Marca" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/merchan.png" alt="Merchan" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/papeleria.png" alt="Papeleria" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/web.png" alt="Web" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/rrss.png" alt="RRSS" style="width: 100%; height: auto; display: block;">
 </section>
 
     </main>
