--- a/es/index.html
+++ b/es/index.html
@@ -20,6 +20,9 @@
     <div class="tarjeta-proyecto">
     <a href="proyectos/kukicha.html" style="text-decoration: none; color: inherit;">
         <div class="imagen-contenedor">
+             <div class="overlay">
+                <div class="text">Diseño Gráfico</div>
+            </div>
             <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha — Identidad de marca">
         </div>
         <div class="proyecto-info">
