--- a/es/index.html
+++ b/es/index.html
@@ -16,18 +16,18 @@
 </nav>
     </header>
 
-    <main class="gallery">
-    <div class="tarjeta-proyecto">
-    <a href="proyectos/kukicha.html" style="text-decoration: none; color: inherit;">
-        <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha — Identidad de marca">
-        </div>
-                   <div class="info-proyecto">
-            <span class="categoria">Identidad de Marca</span>
-            <h3>Kukicha — Té Japonés</h3>
-            <p>Diseño de packaging y branding minimalista.</p>
-        </div>
-    </a>
-</div>
+   <main class="gallery">
+    <div class="project-card">
+        <a href="proyectos/kukicha.html">
+            <img src="../proyectos/packaging.png" alt="Kukicha — Identidad de marca">
+            <div class="overlay">
+                <div class="text">
+                    Identidad de Marca<br>
+                    <span style="font-size: 0.8rem; font-weight: 200;">Kukicha — Té Japonés</span>
+                </div>
+            </div>
+        </a>
+    </div>
         </div>
         <div class="project-card">
             <img src="https://via.placeholder.com/600x450" alt="Proyecto 2">
