--- a/es/index.html
+++ b/es/index.html
@@ -17,17 +17,17 @@
     </header>
 
    <main class="gallery">
-    <div class="project-card">
-        <a href="proyectos/kukicha.html">
-            <img src="../proyectos/packaging.png" alt="Kukicha — Identidad de marca">
-            <div class="overlay">
-                <div class="text">
-                    Identidad de Marca<br>
-                    <span style="font-size: 0.8rem; font-weight: 200;">Kukicha — Té Japonés</span>
-                </div>
+   <div class="project-card">
+    <a href="proyectos/kukicha.html" style="text-decoration: none;">
+        <img src="../proyectos/packaging.png" alt="Kukicha — Identidad de marca">
+        <div class="overlay">
+            <div class="text">
+                Kukicha<br>
+                <span style="font-size: 0.7rem; opacity: 0.8;">Identidad de Marca</span>
             </div>
-        </a>
-    </div>
+        </div>
+    </a>
+</div>
         </div>
         <div class="project-card">
             <img src="https://via.placeholder.com/600x450" alt="Proyecto 2">
