--- a/es/index.html
+++ b/es/index.html
@@ -19,7 +19,7 @@
    <main class="gallery">
    <div class="project-card">
     <a href="proyectos/kukicha.html" style="text-decoration: none;">
-        <img src="palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha — Identidad de marca">
+        <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha — Identidad de marca">
         <div class="overlay">
             <div class="text">
                 Kukicha<br>
