--- a/en/index.html
+++ b/en/index.html
@@ -16,15 +16,15 @@
 </nav>
     </header>
 
-    <main class="gallery">
+   <main class="gallery">
         <div class="project-card">
-            <img src="https://via.placeholder.com/600x450" alt="Project 1">
+            <img src="https://media.giphy.com/media/3owyp35sZAWHEbdMSA/giphy.gif" alt="Project 1">
             <div class="overlay">
                 <div class="text">Project Name</div>
             </div>
         </div>
         <div class="project-card">
-            <img src="https://via.placeholder.com/600x450" alt="Project 2">
+            <img src="https://preview.redd.it/my-top-9-favorite-jp-w-dinosaurs-v0-e3ld6w2gg7xe1.gif?width=618&auto=webp&s=0aae0afe1121ca0cfec1994d2922da8ab29fb32a" alt="Project 2">
             <div class="overlay">
                 <div class="text">Graphic Design</div>
             </div>
