--- a/es/proyectos/kukicha.html
+++ b/es/proyectos/kukicha.html
@@ -5,49 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kukicha — Paloma Aguado</title>
     <link rel="stylesheet" href="/palomaaguado.github.io/styles.css">
-    <style>
-        /* CSS para que la galería sea uniforme */
-        .project-gallery img {
-            width: 100%;
-            height: 500px; /* Altura fija para que todas sean iguales */
-            object-fit: cover; /* Corta la imagen para llenar el espacio sin deformarla */
-            display: block;
-            border-radius: 4px;
-        }
-
-        /* Ajuste para el menú superior */
-        header nav a {
-            text-decoration: none;
-            color: black;
-            font-family: sans-serif;
-            font-size: 0.9rem;
-        }
-
-        @media (max-width: 768px) {
-            .project-gallery {
-                grid-template-columns: 1fr !important; /* En móvil una sola columna */
-            }
-            .project-gallery img {
-                height: 300px; /* Más bajitas en móvil */
-            }
-        }
-    </style>
 </head>
-<body style="margin:0; padding:0; background-color: white;">
+ <body style="margin:0; padding:0; background-color: white;">
 
-    <header style="display: flex; justify-content: space-between; align-items: center; padding: 20px 5%; font-family: sans-serif;">
-        <div class="logo" style="font-weight: bold; letter-spacing: 2px;">
-            <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: black;">PALOMA AGUADO</a>
-        </div>
-        <nav>
-            <a href="/palomaaguado.github.io/es/contacto.html">Contacto</a> 
-            <span style="margin: 0 10px; color: #ccc;">|</span>
-            <a href="/palomaaguado.github.io/en/index.html">English</a>
-        </nav>
-    </header>
-
-    <nav style="padding: 20px 5%; font-family: sans-serif;">
-        <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: #888; font-size: 0.9rem;">← Volver</a>
+    <nav style="padding: 40px; font-family: sans-serif;">
+        <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: #888;">← Volver</a>
     </nav>
 
     <main class="project-container" style="max-width: 1000px; margin: 0 auto; padding: 0 20px;">
@@ -65,16 +27,19 @@
             </div>
         </header>
 
-        <section class="project-gallery" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; padding-bottom: 100px;">
-            <img src="/palomaaguado.github.io/es/proyectos/imagen de marca.png" alt="Marca">
-            <img src="/palomaaguado.github.io/es/proyectos/merchan.png" alt="Merchan">
-            <img src="/palomaaguado.github.io/es/proyectos/papeleria.png" alt="Papeleria">
-            <img src="/palomaaguado.github.io/es/proyectos/web.png" alt="Web">
-            <img src="/palomaaguado.github.io/es/proyectos/rrss.png" alt="RRSS">
-        </section>
+        <section class="project-hero" style="margin-bottom: 60px;">
+    <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha" style="width: 100%; height: auto; display: block;">
+</section>
+
+<section class="project-gallery" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; padding-bottom: 100px;">
+    <img src="/palomaaguado.github.io/es/proyectos/imagen de marca.png" alt="Marca" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/merchan.png" alt="Merchan" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/papeleria.png" alt="Papeleria" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/web.png" alt="Web" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/rrss.png" alt="RRSS" style="width: 100%; height: auto; display: block;">
+</section>
 
     </main>
-
     <footer style="text-align: center; padding: 80px 0; color: #ccc; font-family: sans-serif; font-size: 0.8rem;">
         <p>&copy; 2025 Paloma Aguado</p>
     </footer>
