--- a/es/proyectos/kukicha.html
+++ b/es/proyectos/kukicha.html
@@ -12,7 +12,7 @@
         <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: #888;">← Volver</a>
     </nav>
 
-    <main class="project-container" style="max-width: 1000px; margin: 0 auto; padding: 0 20px;">
+    <main class="project-container" style="max-width: 1000px; margin: 450px; padding: 0 20px;">
         
         <section class="project-hero" style="margin-bottom: 60px;">
             <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha" style="width: 100%; height: auto; display: block;">
