--- a/es/proyectos/kukicha.html
+++ b/es/proyectos/kukicha.html
@@ -4,23 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kukicha — Paloma Aguado</title>
-    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css?v=1">
+    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css">
 </head>
-<body style="margin:0; padding:0; background-color: white;">
+ <body style="margin:0; padding:0; background-color: white;">
 
-    <header style="display: flex; justify-content: space-between; align-items: center; padding: 20px 5%; font-family: sans-serif;">
-        <div class="logo" style="font-weight: bold; letter-spacing: 2px;">
-            <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: black;">PALOMA AGUADO</a>
-        </div>
-        <nav>
-            <a href="/palomaaguado.github.io/es/contacto.html" style="text-decoration: none; color: black; font-size: 0.9rem;">Contacto</a> 
-            <span style="margin: 0 10px; color: #ccc;">|</span>
-            <a href="/palomaaguado.github.io/en/index.html" style="text-decoration: none; color: black; font-size: 0.9rem;">English</a>
-        </nav>
-    </header>
-
-    <nav style="padding: 20px 5%; font-family: sans-serif;">
-        <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: #888; font-size: 0.9rem;">← Volver</a>
+    <nav style="padding: 40px; font-family: sans-serif;">
+        <a href="/palomaaguado.github.io/es/index.html" style="text-decoration: none; color: #888;">← Volver</a>
     </nav>
 
     <main class="project-container" style="max-width: 1000px; margin: 0 auto; padding: 0 20px;">
@@ -34,20 +23,23 @@
             <p style="color: #888; text-transform: uppercase; font-size: 0.8rem; letter-spacing: 1px;">Identidad de Marca / 2025</p>
             <div style="margin-top: 30px; line-height: 1.8; color: #333; max-width: 750px;">
                 <h3 style="font-weight: 600;">Desarrollo del Proyecto</h3>
-                <p>Kukicha es una marca ficticia de té japonés desarrollada desde cero como proyecto de identidad corporativa. El objetivo fue crear una marca visual minimalista, elegante y sostenible...</p>
+                <p>Kukicha es una marca ficticia de té japonés desarrollada desde cero como proyecto de identidad corporativa. El objetivo fue crear una marca visual minimalista, elegante y sostenible, inspirada en la tradición japonesa y orientada a un público joven-adulto consciente del bienestar y el diseño.</p>
             </div>
         </header>
 
-        <section class="project-gallery">
-            <img src="/palomaaguado.github.io/es/proyectos/imagen de marca.png" alt="Marca">
-            <img src="/palomaaguado.github.io/es/proyectos/merchan.png" alt="Merchan">
-            <img src="/palomaaguado.github.io/es/proyectos/papeleria.png" alt="Papeleria">
-            <img src="/palomaaguado.github.io/es/proyectos/web.png" alt="Web">
-            <img src="/palomaaguado.github.io/es/proyectos/rrss.png" alt="RRSS">
-        </section>
+        <section class="project-hero" style="margin-bottom: 60px;">
+    <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha" style="width: 100%; height: auto; display: block;">
+</section>
+
+<section class="project-gallery" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; padding-bottom: 100px;">
+    <img src="/palomaaguado.github.io/es/proyectos/imagen de marca.png" alt="Marca" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/merchan.png" alt="Merchan" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/papeleria.png" alt="Papeleria" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/web.png" alt="Web" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/rrss.png" alt="RRSS" style="width: 100%; height: auto; display: block;">
+</section>
 
     </main>
-
     <footer style="text-align: center; padding: 80px 0; color: #ccc; font-family: sans-serif; font-size: 0.8rem;">
         <p>&copy; 2025 Paloma Aguado</p>
     </footer>
