--- a/es/proyectos/kukicha.html
+++ b/es/proyectos/kukicha.html
@@ -31,8 +31,8 @@
 <section class="project-gallery" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; padding-bottom: 100px;">
    <img src="/palomaaguado.github.io/es/proyectos/merchan.png" alt="Merchan" style="width: 100%; height: 450px; display: block;">
     <img src="/palomaaguado.github.io/es/proyectos/papeleria.png" alt="Papeleria" style="width: 100%; height: 450px; display: block;">
-    <img src="/palomaaguado.github.io/es/proyectos/web.png" alt="Web" style="width: 100%; height: 500px; display: block;">
-    <img src="/palomaaguado.github.io/es/proyectos/rrss.png" alt="RRSS" style="width: 100%; height: 500px; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/web.png" alt="Web" style="width: 100%; height: auto; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/rrss.png" alt="RRSS" style="width: 100%; height: auto; display: block;">
 </section>
 
     </main>
