--- a/en/kukicha.html
+++ b/en/kukicha.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kukicha — Paloma Aguado</title>
+    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css">
+</head>
+ <body style="margin:0; padding:0; background-color: white;">
+
+    <nav style="padding: 40px; font-family: sans-serif;">
+        <a href="/palomaaguado.github.io/en/index.html" style="text-decoration: none; color: #888;">← Volver</a>
+    </nav>
+
+    <main class="project-container" style="max-width: 1000px; margin: 0 auto; padding: 0 20px;">
+        
+        <section class="project-hero" style="margin-bottom: 60px;">
+            <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha" style="width: 100%; height: auto; display: block;">
+        </section>
+
+        <header class="project-header" style="margin-bottom: 60px; font-family: sans-serif;">
+            <h1 style="font-size: 3rem; font-weight: 200; margin-bottom: 10px;">Kukicha</h1>
+            <p style="color: #888; text-transform: uppercase; font-size: 0.8rem; letter-spacing: 1px;">Brand Identity / 2025</p>
+            <div style="margin-top: 30px; line-height: 1.8; color: #333; max-width: 750px;">
+                <h3 style="font-weight: 600;">Project Development</h3>
+                <p>Kukicha is a fictional Japanese tea brand developed from scratch as a corporate identity project. The goal was to create a minimalist, elegant, and sustainable visual brand inspired by Japanese tradition and aimed at a young adult audience conscious of wellness and design.</p>
+            </div>
+        </header>
+
+    
+<section class="project-gallery" style="display: grid; grid-template-columns: 4fr 4fr; gap: 20px; padding-bottom: 100px;">
+   <img src="/palomaaguado.github.io/es/proyectos/merchan.png" alt="Merchan" style="width: 100%; height: 450px; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/papeleria.png" alt="Papeleria" style="width: 100%; height: 450px; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/web.png" alt="Web" style="width: 100%; height: 600px; display: block;">
+    <img src="/palomaaguado.github.io/es/proyectos/rrss.png" alt="RRSS" style="width: 100%; height: 600px; display: block;">
+</section>
+
+    </main>
+    <footer style="text-align: center; padding: 80px 0; color: #ccc; font-family: sans-serif; font-size: 0.8rem;">
+        <p>&copy; 2025 Paloma Aguado</p>
+    </footer>
+
+</body>
+</html>
 
