--- a/en/index.html
+++ b/en/index.html
@@ -15,12 +15,18 @@
     <a href="/palomaaguado.github.io/es/index.html">Español</a>
 </nav>
     </header>
-   <main class="gallery">
-        <div class="project-card">
-            <img src="https://media.giphy.com/media/3owyp35sZAWHEbdMSA/giphy.gif" alt="Project 1">
-            <div class="overlay">
-                <div class="text">Project Name</div>
+    <main class="gallery">
+   <div class="project-card">
+    <a href="/palomaaguado.github.io/es/proyectos/kukicha.html" style="text-decoration: none;">
+        <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha — Brand Identity">
+        <div class="overlay">
+            <div class="text">
+                Kukicha<br>
+                <span style="font-size: 0.7rem; opacity: 0.8;">Brand Identity</span>
             </div>
+        </div>
+    </a>
+</div>
         </div>
         <div class="project-card">
             <img src="https://preview.redd.it/my-top-9-favorite-jp-w-dinosaurs-v0-e3ld6w2gg7xe1.gif?width=618&auto=webp&s=0aae0afe1121ca0cfec1994d2922da8ab29fb32a" alt="Project 2">
